feat: Introduce new effect and asset interfaces for enhanced modding capabilities